--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -14,6 +14,6 @@
       </div>
     </div>
     <div class="sidebar-search"></div>
-    <div class="sidebar-scroll">scroll</div>
+    <div class="sidebar-scroll"></div>
   </div>
 </div>
