--- a/src/app/shared/components/popup/popup.component.scss
+++ b/src/app/shared/components/popup/popup.component.scss
@@ -1,52 +1,22 @@
-.popup {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  z-index: 99;
-  left: 0;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  opacity: 1;
+.popup-header {
+  color: #1f1f1f !important;
+  font-weight: 700;
+  font-size: 24px;
+  padding: 10px 4px;
 
-  .main-popup {
-    width: 48%;
-    height: 60%;
-    max-height: 100%;
-    border-radius: 3px;
-    position: relative;
-    margin: auto;
-    background-color: white;
-
-    .popup-header {
-      font-weight: 700;
-      font-size: 24px;
-      padding: 16px 24px;
-
-      .dx-icon-close {
-        font: 20px/1 DXIcons;
-        cursor: pointer;
-      }
-    }
-
-    .popup-content {
-      padding: 0 24px;
-      font-size: 15px;
-      color: #1f1f1f;
-      font-family: ProductSans-Medium;
-      flex-direction: column !important;
-
-      .row-content {
-        width: 100%;
-        margin-bottom: 16px;
-
-        .row-title {
-          font-weight: 500;
-          padding-bottom: 8px;
-        }
-      }
-    }
+  .popup-title{
+    font-family: 'GoogleSans-Regular';
   }
+  .dx-icon-close {
+    font: 20px/1 DXIcons;
+    cursor: pointer;
+  }
+}
+
+.dx-popup-title {
+  border: none !important;
+}
+
+.dx-popup-content{
+  padding: 0 24px !important;
 }
