--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -1,42 +1,83 @@
-.main-nav {
-  position: absolute;
-  right: 0;
-  padding: 10px 20px;
-  gap: 24px;
+.ms-nav {
+  background-color: transparent;
+  height: 56px;
+  padding: 0 16px;
 
-  .button-icon {
-    cursor: pointer;
-    width: 150px;
-    line-height: 32px;
-    background: rgba(255, 255, 255, 0.3);
-    border-radius: 24px !important;
-    color: #fff;
-    border: none;
+
+  &--right {
+    position: absolute;
+    right: 0;
+  }
+
+  &__button {
     height: 32px;
+    border-radius: 24px;
+    font-size: 13px;
+    padding: 0 16px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: rgba(255, 255, 255, 0.3);
+    border: none;
+    cursor: pointer;
 
-    .button-left {
-      padding: 0 8px;
-      font-weight: 500;
-
-      .add-button {
-        font-size: 13px;
-      }
-
-      .add-icon {
-        width: 24px;
-        height: 24px;
-        -webkit-mask: url('/assets/img/ICON.svg') no-repeat -164px -100px;
-        mask: url('/assets/img/ICON.svg') no-repeat -164px -100px;
-        background-color: #ffffff;
-      }
+    &-group {
+      position: relative;
     }
 
+    &--add {
+      padding: 0 12px 0 8px;
+      border-radius: 24px 0 0 24px;
+    }
+
+    &--dropdown {
+      padding: 0 8px;
+      border-radius: 0 24px 24px 0;
+    }
+
+    &-separator {
+      background-color: #FFFFFF;
+      width: 1px;
+      height: 24px;
+      position: absolute;
+      right: 32px;
+    }
+
+    &-icon {
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      margin-right: 4px;
+
+      &.edit {
+        width: 16px;
+        height: 16px;
+        background-image: url('../../../assets/icons/icon-header-edit.svg');
+      }
+
+      &.add {
+        width: 24px;
+        height: 24px;
+        background-image: url('../../../assets/icons/icon-header-add.svg');
+      }
+
+      &.dropdown {
+        width: 16px;
+        height: 16px;
+        margin-right: 0;
+        background-image: url('../../../assets/icons/icon-arrow-down.svg');
+      }
+    }
   }
+
 
 
   .search-icon {
     width: 24px;
     height: 24px;
+    margin-left: 24px;
     -webkit-mask: url('/assets/img/ICON.svg') no-repeat -164px -132px;
     mask: url('/assets/img/ICON.svg') no-repeat -164px -132px;
     background-color: #ffffff;
@@ -45,6 +86,7 @@
   .bell-icon {
     width: 24px;
     height: 24px;
+    margin-left: 24px;
     -webkit-mask: url('/assets/img/ICON.svg') no-repeat -133px -132px;
     mask: url('/assets/img/ICON.svg') no-repeat -133px -132px;
     background-color: #ffffff;
@@ -53,6 +95,7 @@
   .info-icon {
     width: 24px;
     height: 24px;
+    margin-left: 24px;
     -webkit-mask: url('/assets/img/ICON.svg') no-repeat -324px -388px;
     mask: url('/assets/img/ICON.svg') no-repeat -324px -388px;
     background-color: #ffffff;
@@ -61,6 +104,7 @@
   .setting-icon {
     width: 24px;
     height: 24px;
+    margin-left: 24px;
     -webkit-mask: url('/assets/img/ICON.svg') no-repeat -740px -292px;
     mask: url('/assets/img/ICON.svg') no-repeat -740px -292px;
     background-color: #ffffff;
@@ -69,8 +113,15 @@
   .ava-icon {
     width: 24px;
     height: 24px;
-    // -webkit-mask: url('/assets/img/ICON.svg') no-repeat -133px -132px;
-    // mask: url('/assets/img/ICON.svg') no-repeat -133px -132px;
-    // background-color: #ffffff;
   }
+
+  
 }
+
+.ms-popover .dx-popup-content {
+    padding: 0 !important;
+  }
+
+  .dx-list .dx-empty-message, .dx-list-item{
+    border: none !important;
+  }
