--- a/src/app/main/management/management.component.scss
+++ b/src/app/main/management/management.component.scss
@@ -1,10 +1,18 @@
-.main-img{
+.main-app {
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  background-image: url('../../../assets/img/Landscape-Color.jpg');
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+
+  &--navbar {
     position: absolute;
+    left: 260px;
+    top: 0;
+    width: calc(100% - 260px);
     height: 100vh;
-    width: 100%;
-    background-image: url('../../../assets/img/Landscape-Color.jpg');
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: -1;
+  }
 }
