--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,7 @@
 @import './fonts.scss';
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 body {
@@ -16,7 +16,15 @@ body {
 }
 
 .required {
-  color: red !important;
+  color: #e8384f !important;
+}
+
+.height-100 {
+  height: 100% !important;
+}
+
+.width-100 {
+  width: 100% !important;
 }
 
 .d-flex {
@@ -30,4 +38,6 @@ body {
 .content-between {
   justify-content: space-between !important;
 }
-
+.content-center {
+  justify-content: center !important;
+}
