--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -41,3 +41,14 @@ body {
 .content-center {
   justify-content: center !important;
 }
+
+//devextreme
+
+.dx-popup-content{
+  padding: 0 !important;
+}
+
+.dx-popup-title {
+  padding: 0 !important;
+  border: none !important;
+}
