--- a/src/app/shared/components/views/project/popup-project/popup-project.component.html
+++ b/src/app/shared/components/views/project/popup-project/popup-project.component.html
@@ -26,11 +26,12 @@
       ></app-text-field>
     </div>
   
-    <!-- <app-text-area
+    <app-text-field
     [inputLabel]="popupProjectVar.PopupTextFieldDescriptionLabel"
     [inputPlaceholder]="popupProjectVar.PopupTextFieldDescriptionPlaceholder"
-    inputHeight="78px"
-    ></app-text-area> -->
+    [textFieldHeight]="'78px'"
+    [textArea]="true"
+    ></app-text-field>
   
     <app-text-field
       [inputLabel]="popupProjectVar.PopupTextFieldMemberLabel"
