--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -7,4 +7,8 @@
     font-family: 'GoogleSans-Medium';
     src: url('../assets/fonts/GoogleSans-Medium.otf');
   }
+  @font-face {
+    font-family: 'GoogleSans-Light';
+    src: url('../assets/fonts/GoogleSans-Light.otf');
+  }
   
