--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
-<div class="dashboard d-flex">
+<div class="ms-dashboard">
+  <app-navbar [navbarIcons]="navbarIcons" (isPopupOpen)="openPopup($event)"></app-navbar>
 
-  <app-sidebar></app-sidebar>
+  <app-popup-department  [isPopupOpen]="isPopupOpen" (isPopupClose)="closePopup($event)"></app-popup-department>
 </div>
+<app-sidebar></app-sidebar>
