--- a/src/app/main/management/management.component.html
+++ b/src/app/main/management/management.component.html
@@ -1,11 +1,9 @@
 <div class="main-app">
-  <div class="main-app--navbar">
-    <app-navbar (isPopupOpen)="openPopup($event)"></app-navbar>
-  </div>
+  <!-- <div [ngClass]="{'main-app--navbar': isDefaultPage}">
+    <app-navbar [isDefaultPage]="isDefaultPage" (isPopupOpen)="openPopup($event)"></app-navbar>
+  </div> -->
 
-  <app-popup [isPopupOpen]="isPopupOpen" (isPopupClose)="closePopup($event)"></app-popup>
+  <!-- <app-popup [isPopupOpen]="isPopupOpen" (isPopupClose)="closePopup($event)"></app-popup> -->
 
-  <router-outlet ></router-outlet>
-
-  <app-dashboard  *ngIf="defaultPage"></app-dashboard>
+  <router-outlet></router-outlet>
 </div>
