--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -13,7 +13,63 @@
         <div class="icon-text"> {{item.text}} </div>
       </a>
     </div>
-    <div class="sidebar-search"></div>
-    <div class="sidebar-scroll"></div>
+    <div class="sidebar-search">
+      <dx-text-box height="32px" width="188px" placeholder="Tìm kiếm" mode="search" stylingMode="underlined"
+        [showClearButton]="true"></dx-text-box>
+
+      <div class="sidebar-search__setting"></div>
+    </div>
+
+    <div class="sidebar-scroll">
+      <!-- <div class="sidebar-scroll__main" *ngFor="let project of projects">
+        <div class="sidebar-scroll__project">
+          <div class="sidebar-scroll__project-content d-flex content-between align-center h-100">
+            <div class="sidebar-scroll__project-dropdown d-flex content-center align-center h-100"
+              (click)="openTasks(project)">
+              <div class="sidebar-scroll__project-icon icon-arow--down" [ngClass]="{'rotate-90' : (isTaskOpen && projectToOpen == project)}"></div>
+            </div>
+            <div class="sidebar-scroll__project-title">{{project.ProjectName}}</div>
+          </div>
+        </div>
+        <div class="sidebar-scroll__project-task" *ngIf="isTaskOpen && projectToOpen == project">
+          <div class="sidebar-scroll__task d-flex align-center" *ngFor="let task of project.ProjectTasks">
+            <div class="sidebar-scroll__task-content  d-flex align-center content-center" [routerLink]="'/project'">
+              <div class="sidebar-scroll__task-icon d-flex align-center content-center">
+                <div class="person-icon"></div>
+              </div>
+              <div class="sidebar-scroll__task-title" >{{task}}</div>
+
+            </div>
+          </div>
+
+        </div>
+
+      </div> -->
+      <dx-tree-view [items]="departments" itemTemplate="itemTemplate">
+        <div class="sidebar-scroll__main" *dxTemplate="let itemObj of 'itemTemplate'">
+          <div class="sidebar-scroll__project" *ngIf="itemObj.items">
+            <div class="sidebar-scroll__project-content d-flex content-between align-center h-100">
+              <div class="sidebar-scroll__project-dropdown d-flex content-center align-center h-100">
+                <!-- <div class="sidebar-scroll__project-icon icon-arow--down"></div> -->
+              </div>
+              <div class="sidebar-scroll__project-title" (click)="openTask(itemObj)">{{itemObj.text}}</div>
+            </div>
+          </div>
+          <div class="sidebar-scroll__project-task" *ngIf="!itemObj.items">
+            <div class="sidebar-scroll__task d-flex align-center">
+              <div class="sidebar-scroll__task-content  d-flex align-center content-center" [routerLink]="'/project'">
+                <div class="sidebar-scroll__task-icon d-flex align-center content-center">
+                  <div class="person-icon"></div>
+                </div>
+                <div class="sidebar-scroll__task-title" >{{itemObj.text}}</div>
+  
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </dx-tree-view>
+    </div>
+
   </div>
 </div>
