--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,12 +31,16 @@ body {
   background-color: rgb(97, 97, 97) !important;
 }
 
-.height-100 {
+.h-100 {
   height: 100% !important;
 }
 
-.width-100 {
+.w-100 {
   width: 100% !important;
+}
+
+.rotate-90 {
+  transform: rotate(0deg) !important;
 }
 
 .d-flex {
